# govcookiecutter

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: govcookiecutter-build.yml  govcookiecutter-template-build.yml
docs/: README.md  accessibility.md  index.md
docs/contributing_guide/: README.md
docs/reference/: README.md
docs/structure/: README.md
docs/{{ cookiecutter.repo_name }}/docs/contributor_guide/: writing_mkdocs_documentation.md
hooks/: post_gen_project.py
tests/: test_documentation_build.py  test_govcookiecutter_creation.py
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  .secrets  README.md  mkdocs.yml  pyproject.toml
{{ cookiecutter.repo_name }}/.govcookiecutter/organisational_frameworks/GDS/aqa/: README.md
{{ cookiecutter.repo_name }}/docs/: README.md  index.md
{{ cookiecutter.repo_name }}/docs/contributor_guide/: CONTRIBUTING.md  README.md  writing_accessible_documentation.md  writing_mkdocs_documentation.md
{{ cookiecutter.repo_name }}/docs/user_guide/: README.md
