[tool.poetry]
name = "govcookiecutter"
version = "0.1.0"
description = "A cookiecutter template for government projects"
authors = ["James Westwood <james.westwood@food.gov.uk>"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cookies = { git = "https://github.com/Jacobb164/pytest-cookies" }

[tool.poetry.dependencies]
python = ">=3.10"
bandit = "^1.7.0"
cookiecutter = "^1.7.3"
coverage = "^5.5"
detect-secrets = "==1.0.3"
jinja2-time = "^0.2.0"
pre-commit = "^2.13.0"
pytest = "^6.2"
pytest-mock = "^3.6.1"
pytest-xdist = "^2.2.1"
python-dotenv = "^0.17.0"
mkdocs = "^1.2.3"
mkdocs-govuk = "^0.1.0"
mkdocs-material = "^7.1.0"
tomli = { version = "^2.0.0", python = "<3.11" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# `coverage` configurations
[tool.coverage.run]
source = [
    "./hooks",
    "./{{ cookiecutter.repo_name }}/src"
]
omit = [
    "./{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name.lower().replace(' ', '_').replace('-', '_') }}/run_pipeline.py"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:" 
]

# `isort` configurations
[tool.isort]
profile = "black"

# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules",
    "--ignore='./docs/'",
    "--ignore='./example/'",
    "--ignore='./{{ cookiecutter.repo_name }}/docs/'"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./tests"
]

# `bandit` configurations
[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = []
