# {{ cookiecutter.repo_name }}/pyproject.toml

[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.overview }}"
authors = ["{{ cookiecutter.organisation_handle }}"]

[tool.poetry.dependencies]
python = ">=3.10"
pyyaml = "^5.4"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
detect-secrets = "==1.0.3"
pre-commit = "^2.13.0"
pytest = "^6.2"
python-dotenv = "^0.17.0"
mkdocs = "^1.2.3"
mkdocs-material = "^7.1.0"
tomli = { version = "^2.0.0", python = "<3.11" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# `coverage` configurations
[tool.coverage.run]
source = [
    "./"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:" 
]

# `isort` configurations
[tool.isort]
profile = "black"

# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./tests"
]
